--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -21,3 +21,9 @@
     text-wrap: nowrap;
     padding-right: 10px;
   }
+
+  .Logout-btn {
+    background-color: dodgerblue;
+    padding: auto;
+    color: white;
+  }
