--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -1,6 +1,7 @@
 .user-form {
     width: 400px;
     padding: 20px;
+    padding-left: 10px;
     background-color: skyblue;
 }
 
@@ -12,7 +13,7 @@
 .user-form form, 
 .user-form input, 
 .user-form button{
-    width: 100%;
+    width: 98%;
 }
 
 .user-form label {
@@ -25,7 +26,7 @@
 
 .user-form button[type="submit"] {
     /* background-color: rgb(196, 75, 75); */
-    width: 417px;
+    width: 409px;
     color: white;
     cursor: pointer;
 } 
